Change to include

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,5 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-exclude-package-data = { "pp_parse" = ["fcp_parse.py"] }
+# Explicitly include only the 'pp_parse' module
+py-modules = ["pp_parse"]
